--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
       crossorigin="anonymous"
     />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div>
+        <img src="img/devjane.png" alt="" />
+      </div>
+    </header>
+  </body>
 </html>
