added My Services section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,69 @@
       <div>
         <img src="img/devjane.png" alt="" />
       </div>
+      <button class="nav-toggle" aria-label="toggle navigation">
+        <span class="hamburger"></span>
+      </button>
+      <nav class="nav">
+        <ul class="nav_list">
+          <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">My Services</a>
+          </li>
+          <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
+        </ul>
+      </nav>
     </header>
+
+    <!-- Introduction -->
+    <section class="intro" id="home">
+      <h1 class="section__title section__title--intro">
+        Hi, I am <strong>Fredrik Ridderfalk</strong>
+      </h1>
+      <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+      <img
+        src="img/dev-jane-01.jpg"
+        alt="a picture of Fredrik Ridderfalk smiling"
+      />
+    </section>
+
+    <!-- My services -->
+    <section class="my-services" id="services">
+      <h2 class="section__title section__title--services">What I do</h2>
+      <div class="services">
+        <div class="service">
+          <h3>Design + Development</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+            maiores vel repellendus quia aut, nihil a eveniet numquam officiis
+            laboriosam blanditiis, consectetur obcaecati quos consequatur
+            tempora cumque! Voluptatum, amet nulla!
+          </p>
+        </div>
+
+        <div class="service">
+          <h3>Landing Pages</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis
+            eius eligendi recusandae quis porro, reprehenderit veniam laudantium
+            dolorum distinctio, ex eos in. Sed velit alias quibusdam, mollitia
+            culpa nihil quod.
+          </p>
+        </div>
+
+        <div class="service">
+          <h3>E-mail Newsletters</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+            facere fuga, architecto consectetur ipsa repellendus exercitationem
+            soluta debitis illum tempore esse natus! Similique a temporibus
+            animi eius, in natus nihil.
+          </p>
+        </div>
+      </div>
+
+      <a href="#work" class="btn">My Work</a>
+    </section>
   </body>
 </html>
