added href-links to nav__links

--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
       </button>
       <nav class="nav">
         <ul class="nav_list">
-          <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+          <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
           <li class="nav__item">
-            <a href="#" class="nav__link">My Services</a>
+            <a href="services" class="nav__link">My Services</a>
           </li>
-          <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
+          <li class="nav__item">
+            <a href="about" class="nav__link">About Me</a>
+          </li>
+          <li class="nav__item">
+            <a href="work" class="nav__link">My Work</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -85,5 +89,8 @@
 
       <a href="#work" class="btn">My Work</a>
     </section>
+
+    <!-- About Me -->
+    <section class="about-me" id="about"></section>
   </body>
 </html>
