--- a/index.html
+++ b/index.html
@@ -91,6 +91,94 @@
     </section>
 
     <!-- About Me -->
-    <section class="about-me" id="about"></section>
+    <section class="about-me" id="about">
+      <h2 class="section__title section__title--about">Who I am</h2>
+      <p class="section__subtitle section__subtitle--about">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius rerum
+        repudiandae expedita labore amet nulla. Velit natus, blanditiis corporis
+        a ipsa, earum assumenda impedit architecto commodi repellendus rerum
+        maxime reprehenderit?
+      </p>
+
+      <div class="about-me__body">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+          necessitatibus laborum unde, itaque ducimus recusandae amet voluptas
+          officia ratione deleniti assumenda. Aperiam cumque illo laborum neque,
+          voluptatibus blanditiis nisi enim?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus
+          voluptas hic incidunt libero dignissimos impedit exercitationem
+          obcaecati quae eos voluptatum possimus, inventore doloribus suscipit
+          quasi odio vero quis ullam ea.
+        </p>
+      </div>
+
+      <img src="img/dev-jane-02.jpg" alt="" />
+    </section>
+
+    <!-- My Work -->
+    <section class="my-work" id="work">
+      <h2 class="section__title section__title--work">My Work</h2>
+      <p class="section__subtitle">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eos
+        corrupti sequi, numquam modi ipsum? Eius voluptatibus minus provident
+        amet excepturi earum facere exercitationem dolore, quibusdam dicta optio
+        autem? Quod!
+      </p>
+
+      <div class="portfolio">
+        <!-- Portfolio item 1 -->
+        <a href="#" class="portfolio__item">
+          <img src="img/portfolio-01.jpg" alt="" class="portfolio__img" />
+        </a>
+
+        <!-- Portfolio item 2 -->
+        <a href="#" class="portfolio__item">
+          <img src="img/portfolio-02.jpg" alt="" class="portfolio__img" />
+        </a>
+
+        <!-- Portfolio item 3 -->
+        <a href="#" class="portfolio__item">
+          <img src="img/portfolio-03.jpg" alt="" class="portfolio__img" />
+        </a>
+
+        <!-- Portfolio item 4 -->
+        <a href="#" class="portfolio__item">
+          <img src="img/portfolio-04.jpg" alt="" class="portfolio__img" />
+        </a>
+
+        <!-- Portfolio item 5 -->
+        <a href="#" class="portfolio__item">
+          <img src="img/portfolio-05.jpg" alt="" class="portfolio__img" />
+        </a>
+
+        <!-- Portfolio item 6 -->
+        <a href="#" class="portfolio__item">
+          <img src="img/portfolio-06.jpg" alt="" class="portfolio__img" />
+        </a>
+
+        <!-- Portfolio item 7 -->
+        <a href="#" class="portfolio__item">
+          <img src="img/portfolio-07.jpg" alt="" class="portfolio__img" />
+        </a>
+
+        <!-- Portfolio item 8 -->
+        <a href="#" class="portfolio__item">
+          <img src="img/portfolio-08.jpg" alt="" class="portfolio__img" />
+        </a>
+
+        <!-- Portfolio item 9 -->
+        <a href="#" class="portfolio__item">
+          <img src="img/portfolio-09.jpg" alt="" class="portfolio__img" />
+        </a>
+
+        <!-- Portfolio item 10 -->
+        <a href="#" class="portfolio__item">
+          <img src="img/portfolio-10.jpg" alt="" class="portfolio__img" />
+        </a>
+      </div>
+    </section>
   </body>
 </html>
