--- a/index.html
+++ b/index.html
@@ -180,5 +180,26 @@
         </a>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+      <a href="mailto:ridderfalk@gmail.com" class="footer-link"
+        >ridderfalk@gmail.com</a
+      >
+      <ul class="social-list">
+        <li class="social-list__item">
+          <a href="" class="social-list__link">a</a>
+        </li>
+        <li class="social-list__item">
+          <a href="" class="social-list__link">b</a>
+        </li>
+        <li class="social-list__item">
+          <a href="" class="social-list__link">c</a>
+        </li>
+        <li class="social-list__item">
+          <a href="" class="social-list__link">d</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
