updated hero image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc="
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
@@ -47,7 +48,7 @@
       </h1>
       <p class="section__subtitle section__subtitle--intro">front-end dev</p>
       <img
-        src="img/dev-jane-01.jpg"
+        src="img/dev-fredrik-01.png"
         alt="a picture of Fredrik Ridderfalk smiling"
       />
     </section>
