added animation to section__title

--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fredrik Ridderfalk's Portfolio</title>
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
       integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc="
       crossorigin="anonymous"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -55,7 +63,9 @@
 
     <!-- My services -->
     <section class="my-services" id="services">
-      <h2 class="section__title section__title--services">What I do</h2>
+      <div class="section__title--container">
+        <h2 class="section__title section__title--services">What I do</h2>
+      </div>
       <div class="services">
         <div class="service">
           <h3>Design + Development</h3>
