updated intro section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <img
         src="img/dev-fredrik-01.png"
         alt="a picture of Fredrik Ridderfalk smiling"
+        class="intro__img"
       />
     </section>
 
