--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
       </div>
 
-      <a href="#work" class="btn">My Work</a>
+      <a href="#work" class="btn">See My Work</a>
     </section>
 
     <!-- About Me -->
