updated About me section

--- a/index.html
+++ b/index.html
@@ -106,10 +106,7 @@
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
       <p class="section__subtitle section__subtitle--about">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius rerum
-        repudiandae expedita labore amet nulla. Velit natus, blanditiis corporis
-        a ipsa, earum assumenda impedit architecto commodi repellendus rerum
-        maxime reprehenderit?
+        Scientist & teacher turned developer
       </p>
 
       <div class="about-me__body">
