--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </p>
       </div>
 
-      <img src="img/dev-jane-02.jpg" alt="" />
+      <img src="img/dev-jane-02.jpg" alt="" class="about-me__img" />
     </section>
 
     <!-- My Work -->
