updated My work section with grid

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="service">
-          <h3>E-mail Newsletters</h3>
+          <h3>Browser Extensions</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
             facere fuga, architecto consectetur ipsa repellendus exercitationem
@@ -130,63 +130,101 @@
     <!-- My Work -->
     <section class="my-work" id="work">
       <h2 class="section__title section__title--work">My Work</h2>
-      <p class="section__subtitle">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis eos
-        corrupti sequi, numquam modi ipsum? Eius voluptatibus minus provident
-        amet excepturi earum facere exercitationem dolore, quibusdam dicta optio
-        autem? Quod!
+      <p class="section__subtitle section__subtitle--work">
+        A selection of my range of work
       </p>
 
       <div class="portfolio">
         <!-- Portfolio item 1 -->
-        <a href="#" class="portfolio__item">
-          <img src="img/portfolio-01.jpg" alt="" class="portfolio__img" />
+        <a href="#" class="portfolio__item-1">
+          <img src="img/portfolio-01.jpg" alt="" class="portfolio__img-1" />
         </a>
+        <div class="portfolio__text-1">
+          <h3 class="portfolio__subtitle">Padel Scorekeeping App</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            aperiam animi ea fugiat at atque, rem error temporibus voluptate
+            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
+            nemo reiciendis.
+          </p>
+        </div>
 
         <!-- Portfolio item 2 -->
-        <a href="#" class="portfolio__item">
-          <img src="img/portfolio-02.jpg" alt="" class="portfolio__img" />
+        <a href="#" class="portfolio__item-2">
+          <img src="img/portfolio-02.jpg" alt="" class="portfolio__img-2" />
         </a>
+        <p class="portfolio__text-2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+          aperiam animi ea fugiat at atque, rem error temporibus voluptate
+          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
+          reiciendis.
+        </p>
 
         <!-- Portfolio item 3 -->
-        <a href="#" class="portfolio__item">
-          <img src="img/portfolio-03.jpg" alt="" class="portfolio__img" />
+        <a href="#" class="portfolio__item-3">
+          <img src="img/portfolio-03.jpg" alt="" class="portfolio__img-3" />
         </a>
+        <p class="portfolio__text-3">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+          aperiam animi ea fugiat at atque, rem error temporibus voluptate
+          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
+          reiciendis.
+        </p>
 
         <!-- Portfolio item 4 -->
-        <a href="#" class="portfolio__item">
-          <img src="img/portfolio-04.jpg" alt="" class="portfolio__img" />
+        <a href="#" class="portfolio__item-4">
+          <img src="img/portfolio-04.jpg" alt="" class="portfolio__img-4" />
         </a>
+        <p class="portfolio__text-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+          aperiam animi ea fugiat at atque, rem error temporibus voluptate
+          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
+          reiciendis.
+        </p>
 
         <!-- Portfolio item 5 -->
-        <a href="#" class="portfolio__item">
-          <img src="img/portfolio-05.jpg" alt="" class="portfolio__img" />
+        <a href="#" class="portfolio__item-5">
+          <img src="img/portfolio-05.jpg" alt="" class="portfolio__img-5" />
         </a>
+        <p class="portfolio__text-5">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+          aperiam animi ea fugiat at atque, rem error temporibus voluptate
+          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
+          reiciendis.
+        </p>
 
         <!-- Portfolio item 6 -->
-        <a href="#" class="portfolio__item">
-          <img src="img/portfolio-06.jpg" alt="" class="portfolio__img" />
+        <a href="#" class="portfolio__item-6">
+          <img src="img/portfolio-06.jpg" alt="" class="portfolio__img-6" />
         </a>
+        <p class="portfolio__text-6">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+          aperiam animi ea fugiat at atque, rem error temporibus voluptate
+          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
+          reiciendis.
+        </p>
 
         <!-- Portfolio item 7 -->
-        <a href="#" class="portfolio__item">
-          <img src="img/portfolio-07.jpg" alt="" class="portfolio__img" />
+        <a href="#" class="portfolio__item-7">
+          <img src="img/portfolio-07.jpg" alt="" class="portfolio__img-7" />
         </a>
+        <p class="portfolio__text-7">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+          aperiam animi ea fugiat at atque, rem error temporibus voluptate
+          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
+          reiciendis.
+        </p>
 
         <!-- Portfolio item 8 -->
-        <a href="#" class="portfolio__item">
-          <img src="img/portfolio-08.jpg" alt="" class="portfolio__img" />
+        <a href="#" class="portfolio__item-8">
+          <img src="img/portfolio-08.jpg" alt="" class="portfolio__img-8" />
         </a>
-
-        <!-- Portfolio item 9 -->
-        <a href="#" class="portfolio__item">
-          <img src="img/portfolio-09.jpg" alt="" class="portfolio__img" />
-        </a>
-
-        <!-- Portfolio item 10 -->
-        <a href="#" class="portfolio__item">
-          <img src="img/portfolio-10.jpg" alt="" class="portfolio__img" />
-        </a>
+        <p class="portfolio__text-8">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+          aperiam animi ea fugiat at atque, rem error temporibus voluptate
+          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
+          reiciendis.
+        </p>
       </div>
     </section>
 
