added headings to portfolio items

--- a/index.html
+++ b/index.html
@@ -153,78 +153,99 @@
         <a href="#" class="portfolio__item-2">
           <img src="img/portfolio-02.jpg" alt="" class="portfolio__img-2" />
         </a>
-        <p class="portfolio__text-2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          aperiam animi ea fugiat at atque, rem error temporibus voluptate
-          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
-          reiciendis.
-        </p>
+        <div class="portfolio__text-2">
+          <h3 class="portfolio__subtitle">Title of project</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            aperiam animi ea fugiat at atque, rem error temporibus voluptate
+            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
+            nemo reiciendis.
+          </p>
+        </div>
 
         <!-- Portfolio item 3 -->
         <a href="#" class="portfolio__item-3">
           <img src="img/portfolio-03.jpg" alt="" class="portfolio__img-3" />
         </a>
-        <p class="portfolio__text-3">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          aperiam animi ea fugiat at atque, rem error temporibus voluptate
-          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
-          reiciendis.
-        </p>
+        <div class="portfolio__text-3">
+          <h3 class="portfolio__subtitle">Title of project</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            aperiam animi ea fugiat at atque, rem error temporibus voluptate
+            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
+            nemo reiciendis.
+          </p>
+        </div>
 
         <!-- Portfolio item 4 -->
         <a href="#" class="portfolio__item-4">
           <img src="img/portfolio-04.jpg" alt="" class="portfolio__img-4" />
         </a>
-        <p class="portfolio__text-4">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          aperiam animi ea fugiat at atque, rem error temporibus voluptate
-          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
-          reiciendis.
-        </p>
+        <div class="portfolio__text-4">
+          <h3 class="portfolio__subtitle">Title of project</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            aperiam animi ea fugiat at atque, rem error temporibus voluptate
+            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
+            nemo reiciendis.
+          </p>
+        </div>
 
         <!-- Portfolio item 5 -->
         <a href="#" class="portfolio__item-5">
           <img src="img/portfolio-05.jpg" alt="" class="portfolio__img-5" />
         </a>
-        <p class="portfolio__text-5">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          aperiam animi ea fugiat at atque, rem error temporibus voluptate
-          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
-          reiciendis.
-        </p>
+        <div class="portfolio__text-5">
+          <h3 class="portfolio__subtitle">Title of project</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            aperiam animi ea fugiat at atque, rem error temporibus voluptate
+            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
+            nemo reiciendis.
+          </p>
+        </div>
 
         <!-- Portfolio item 6 -->
         <a href="#" class="portfolio__item-6">
           <img src="img/portfolio-06.jpg" alt="" class="portfolio__img-6" />
         </a>
-        <p class="portfolio__text-6">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          aperiam animi ea fugiat at atque, rem error temporibus voluptate
-          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
-          reiciendis.
-        </p>
+        <div class="portfolio__text-6">
+          <h3 class="portfolio__subtitle">Title of project</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            aperiam animi ea fugiat at atque, rem error temporibus voluptate
+            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
+            nemo reiciendis.
+          </p>
+        </div>
 
         <!-- Portfolio item 7 -->
         <a href="#" class="portfolio__item-7">
           <img src="img/portfolio-07.jpg" alt="" class="portfolio__img-7" />
         </a>
-        <p class="portfolio__text-7">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          aperiam animi ea fugiat at atque, rem error temporibus voluptate
-          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
-          reiciendis.
-        </p>
+        <div class="portfolio__text-7">
+          <h3 class="portfolio__subtitle">Title of project</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            aperiam animi ea fugiat at atque, rem error temporibus voluptate
+            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
+            nemo reiciendis.
+          </p>
+        </div>
 
         <!-- Portfolio item 8 -->
         <a href="#" class="portfolio__item-8">
           <img src="img/portfolio-08.jpg" alt="" class="portfolio__img-8" />
         </a>
-        <p class="portfolio__text-8">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          aperiam animi ea fugiat at atque, rem error temporibus voluptate
-          cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic nemo
-          reiciendis.
-        </p>
+        <div class="portfolio__text-8">
+          <h3 class="portfolio__subtitle">Title of project</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            aperiam animi ea fugiat at atque, rem error temporibus voluptate
+            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
+            nemo reiciendis.
+          </p>
+        </div>
       </div>
     </section>
 
