--- a/index.html
+++ b/index.html
@@ -136,9 +136,6 @@
 
       <div class="portfolio">
         <!-- Portfolio item 1 -->
-        <a href="#" class="portfolio__item-1">
-          <img src="img/portfolio-01.jpg" alt="" class="portfolio__img-1" />
-        </a>
         <div class="portfolio__text-1">
           <h3 class="portfolio__subtitle">Padel Scorekeeping App</h3>
           <p>
@@ -148,11 +145,15 @@
             nemo reiciendis.
           </p>
         </div>
+        <a href="#" class="portfolio__item-1">
+          <img
+            src="img/portfolio-01.jpg"
+            alt=""
+            class="portfolio__img portfolio__img-1"
+          />
+        </a>
 
         <!-- Portfolio item 2 -->
-        <a href="#" class="portfolio__item-2">
-          <img src="img/portfolio-02.jpg" alt="" class="portfolio__img-2" />
-        </a>
         <div class="portfolio__text-2">
           <h3 class="portfolio__subtitle">Title of project</h3>
           <p>
@@ -162,11 +163,15 @@
             nemo reiciendis.
           </p>
         </div>
+        <a href="#" class="portfolio__item-2">
+          <img
+            src="img/portfolio-02.jpg"
+            alt=""
+            class="portfolio__img portfolio__img-2"
+          />
+        </a>
 
         <!-- Portfolio item 3 -->
-        <a href="#" class="portfolio__item-3">
-          <img src="img/portfolio-03.jpg" alt="" class="portfolio__img-3" />
-        </a>
         <div class="portfolio__text-3">
           <h3 class="portfolio__subtitle">Title of project</h3>
           <p>
@@ -176,11 +181,15 @@
             nemo reiciendis.
           </p>
         </div>
+        <a href="#" class="portfolio__item-3">
+          <img
+            src="img/portfolio-03.jpg"
+            alt=""
+            class="portfolio__img portfolio__img-3"
+          />
+        </a>
 
         <!-- Portfolio item 4 -->
-        <a href="#" class="portfolio__item-4">
-          <img src="img/portfolio-04.jpg" alt="" class="portfolio__img-4" />
-        </a>
         <div class="portfolio__text-4">
           <h3 class="portfolio__subtitle">Title of project</h3>
           <p>
@@ -190,11 +199,15 @@
             nemo reiciendis.
           </p>
         </div>
+        <a href="#" class="portfolio__item-4">
+          <img
+            src="img/portfolio-04.jpg"
+            alt=""
+            class="portfolio__img portfolio__img-4"
+          />
+        </a>
 
         <!-- Portfolio item 5 -->
-        <a href="#" class="portfolio__item-5">
-          <img src="img/portfolio-05.jpg" alt="" class="portfolio__img-5" />
-        </a>
         <div class="portfolio__text-5">
           <h3 class="portfolio__subtitle">Title of project</h3>
           <p>
@@ -204,11 +217,15 @@
             nemo reiciendis.
           </p>
         </div>
+        <a href="#" class="portfolio__item-5">
+          <img
+            src="img/portfolio-05.jpg"
+            alt=""
+            class="portfolio__img portfolio__img-5"
+          />
+        </a>
 
         <!-- Portfolio item 6 -->
-        <a href="#" class="portfolio__item-6">
-          <img src="img/portfolio-06.jpg" alt="" class="portfolio__img-6" />
-        </a>
         <div class="portfolio__text-6">
           <h3 class="portfolio__subtitle">Title of project</h3>
           <p>
@@ -218,11 +235,15 @@
             nemo reiciendis.
           </p>
         </div>
+        <a href="#" class="portfolio__item-6">
+          <img
+            src="img/portfolio-06.jpg"
+            alt=""
+            class="portfolio__img portfolio__img-6"
+          />
+        </a>
 
         <!-- Portfolio item 7 -->
-        <a href="#" class="portfolio__item-7">
-          <img src="img/portfolio-07.jpg" alt="" class="portfolio__img-7" />
-        </a>
         <div class="portfolio__text-7">
           <h3 class="portfolio__subtitle">Title of project</h3>
           <p>
@@ -232,11 +253,15 @@
             nemo reiciendis.
           </p>
         </div>
+        <a href="#" class="portfolio__item-7">
+          <img
+            src="img/portfolio-07.jpg"
+            alt=""
+            class="portfolio__img portfolio__img-7"
+          />
+        </a>
 
         <!-- Portfolio item 8 -->
-        <a href="#" class="portfolio__item-8">
-          <img src="img/portfolio-08.jpg" alt="" class="portfolio__img-8" />
-        </a>
         <div class="portfolio__text-8">
           <h3 class="portfolio__subtitle">Title of project</h3>
           <p>
@@ -246,6 +271,13 @@
             nemo reiciendis.
           </p>
         </div>
+        <a href="#" class="portfolio__item-8">
+          <img
+            src="img/portfolio-08.jpg"
+            alt=""
+            class="portfolio__img portfolio__img-8"
+          />
+        </a>
       </div>
     </section>
 
