added about-me images

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </p>
       </div>
 
-      <img src="img/dev-jane-02.jpg" alt="" class="about-me__img" />
+      <img src="img/dev-fredrik-03.png" alt="" class="about-me__img" />
     </section>
 
     <!-- My Work -->
