removed nav img link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <header>
       <div>
-        <img src="img/devjane.png" alt="" />
+        <img src="" alt="" />
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
