updated portfolio subtitles

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <!-- Portfolio item 2 -->
         <div class="portfolio__text-2">
-          <h3 class="portfolio__subtitle">Title of project</h3>
+          <h3 class="portfolio__subtitle">Chrome Extension</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
             aperiam animi ea fugiat at atque, rem error temporibus voluptate
@@ -245,7 +245,7 @@
 
         <!-- Portfolio item 7 -->
         <div class="portfolio__text-7">
-          <h3 class="portfolio__subtitle">Title of project</h3>
+          <h3 class="portfolio__subtitle">Food Blog</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
             aperiam animi ea fugiat at atque, rem error temporibus voluptate
@@ -263,13 +263,8 @@
 
         <!-- Portfolio item 8 -->
         <div class="portfolio__text-8">
-          <h3 class="portfolio__subtitle">Title of project</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            aperiam animi ea fugiat at atque, rem error temporibus voluptate
-            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
-            nemo reiciendis.
-          </p>
+          <h3 class="portfolio__subtitle">Netflix Clone</h3>
+          <p>Coming soon!</p>
         </div>
         <a href="#" class="portfolio__item-8">
           <img
