updated portfolio grid

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
       <div class="portfolio">
         <!-- Portfolio item 1 -->
-        <div class="portfolio__text-1">
+        <div class="portfolio__text portfolio__text-1">
           <h3 class="portfolio__subtitle">Padel Scorekeeping App</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -145,7 +145,7 @@
             nemo reiciendis.
           </p>
         </div>
-        <a href="#" class="portfolio__item-1">
+        <a href="#" class="portfolio__item portfolio__item-1">
           <img
             src="img/portfolio-01.jpg"
             alt=""
@@ -154,7 +154,7 @@
         </a>
 
         <!-- Portfolio item 2 -->
-        <div class="portfolio__text-2">
+        <div class="portfolio__text portfolio__text-2">
           <h3 class="portfolio__subtitle">Chrome Extension</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -163,7 +163,7 @@
             nemo reiciendis.
           </p>
         </div>
-        <a href="#" class="portfolio__item-2">
+        <a href="#" class="portfolio__item portfolio__item-2">
           <img
             src="img/portfolio-02.jpg"
             alt=""
@@ -172,7 +172,7 @@
         </a>
 
         <!-- Portfolio item 3 -->
-        <div class="portfolio__text-3">
+        <div class="portfolio__text portfolio__text-3">
           <h3 class="portfolio__subtitle">Title of project</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -181,7 +181,7 @@
             nemo reiciendis.
           </p>
         </div>
-        <a href="#" class="portfolio__item-3">
+        <a href="#" class="portfolio__item portfolio__item-3">
           <img
             src="img/portfolio-03.jpg"
             alt=""
@@ -190,7 +190,7 @@
         </a>
 
         <!-- Portfolio item 4 -->
-        <div class="portfolio__text-4">
+        <div class="portfolio__text portfolio__text-4">
           <h3 class="portfolio__subtitle">Title of project</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -199,7 +199,7 @@
             nemo reiciendis.
           </p>
         </div>
-        <a href="#" class="portfolio__item-4">
+        <a href="#" class="portfolio__item portfolio__item-4">
           <img
             src="img/portfolio-04.jpg"
             alt=""
@@ -208,7 +208,7 @@
         </a>
 
         <!-- Portfolio item 5 -->
-        <div class="portfolio__text-5">
+        <div class="portfolio__text portfolio__text-5">
           <h3 class="portfolio__subtitle">Title of project</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -217,7 +217,7 @@
             nemo reiciendis.
           </p>
         </div>
-        <a href="#" class="portfolio__item-5">
+        <a href="#" class="portfolio__item portfolio__item-5">
           <img
             src="img/portfolio-05.jpg"
             alt=""
@@ -226,7 +226,7 @@
         </a>
 
         <!-- Portfolio item 6 -->
-        <div class="portfolio__text-6">
+        <div class="portfolio__text portfolio__text-6">
           <h3 class="portfolio__subtitle">Title of project</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -235,7 +235,7 @@
             nemo reiciendis.
           </p>
         </div>
-        <a href="#" class="portfolio__item-6">
+        <a href="#" class="portfolio__item portfolio__item-6">
           <img
             src="img/portfolio-06.jpg"
             alt=""
@@ -244,7 +244,7 @@
         </a>
 
         <!-- Portfolio item 7 -->
-        <div class="portfolio__text-7">
+        <div class="portfolio__text portfolio__text-7">
           <h3 class="portfolio__subtitle">Food Blog</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
@@ -253,7 +253,7 @@
             nemo reiciendis.
           </p>
         </div>
-        <a href="#" class="portfolio__item-7">
+        <a href="#" class="portfolio__item portfolio__item-7">
           <img
             src="img/portfolio-07.jpg"
             alt=""
@@ -262,11 +262,11 @@
         </a>
 
         <!-- Portfolio item 8 -->
-        <div class="portfolio__text-8">
+        <div class="portfolio__text portfolio__text-8">
           <h3 class="portfolio__subtitle">Netflix Clone</h3>
           <p>Coming soon!</p>
         </div>
-        <a href="#" class="portfolio__item-8">
+        <a href="#" class="portfolio__item portfolio__item-8">
           <img
             src="img/portfolio-08.jpg"
             alt=""
