--- a/index.html
+++ b/index.html
@@ -246,12 +246,7 @@
         <!-- Portfolio item 7 -->
         <div class="portfolio__text portfolio__text-7">
           <h3 class="portfolio__subtitle">Food Blog</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            aperiam animi ea fugiat at atque, rem error temporibus voluptate
-            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
-            nemo reiciendis.
-          </p>
+          <p>Coming soon!</p>
         </div>
         <a href="#" class="portfolio__item portfolio__item-7">
           <img
