updated footer with af icons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <header>
       <div>
-        <img src="" alt="" />
+        <i class="far fa-hand-spock"></i>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -106,7 +106,7 @@
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
       <p class="section__subtitle section__subtitle--about">
-        Scientist & teacher turned developer
+        Biologist & teacher turned developer
       </p>
 
       <div class="about-me__body">
@@ -173,7 +173,7 @@
 
         <!-- Portfolio item 3 -->
         <div class="portfolio__text portfolio__text-3">
-          <h3 class="portfolio__subtitle">Title of project</h3>
+          <h3 class="portfolio__subtitle">Blackjack Game</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
             aperiam animi ea fugiat at atque, rem error temporibus voluptate
@@ -191,7 +191,7 @@
 
         <!-- Portfolio item 4 -->
         <div class="portfolio__text portfolio__text-4">
-          <h3 class="portfolio__subtitle">Title of project</h3>
+          <h3 class="portfolio__subtitle">Passenger Counter</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
             aperiam animi ea fugiat at atque, rem error temporibus voluptate
@@ -209,13 +209,8 @@
 
         <!-- Portfolio item 5 -->
         <div class="portfolio__text portfolio__text-5">
-          <h3 class="portfolio__subtitle">Title of project</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            aperiam animi ea fugiat at atque, rem error temporibus voluptate
-            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
-            nemo reiciendis.
-          </p>
+          <h3 class="portfolio__subtitle">Magic 8-ball</h3>
+          <p>Coming soon!</p>
         </div>
         <a href="#" class="portfolio__item portfolio__item-5">
           <img
@@ -227,13 +222,8 @@
 
         <!-- Portfolio item 6 -->
         <div class="portfolio__text portfolio__text-6">
-          <h3 class="portfolio__subtitle">Title of project</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            aperiam animi ea fugiat at atque, rem error temporibus voluptate
-            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
-            nemo reiciendis.
-          </p>
+          <h3 class="portfolio__subtitle">Email Newsletter</h3>
+          <p>Coming soon!</p>
         </div>
         <a href="#" class="portfolio__item portfolio__item-6">
           <img
@@ -278,16 +268,20 @@
       >
       <ul class="social-list">
         <li class="social-list__item">
-          <a href="" class="social-list__link">a</a>
+          <a href="" class="social-list__link"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a href="" class="social-list__link">b</a>
+          <a href="" class="social-list__link"><i class="fab fa-github"></i></a>
         </li>
         <li class="social-list__item">
-          <a href="" class="social-list__link">c</a>
+          <a href="" class="social-list__link"
+            ><i class="fab fa-twitter"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a href="" class="social-list__link">d</a>
+          <a href="" class="social-list__link"><i class="fas fa-at"></i></a>
         </li>
       </ul>
     </footer>
