added additional icons for footer

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <a href="mailto:ridderfalk@gmail.com" class="footer-link"
         >ridderfalk@gmail.com</a
       >
@@ -279,6 +279,14 @@
           <a href="" class="social-list__link"
             ><i class="fab fa-twitter"></i
           ></a>
+        </li>
+        <li class="social-list__item">
+          <a href="" class="social-list__link"
+            ><i class="fab fa-youtube"></i
+          ></a>
+        </li>
+        <li class="social-list__item">
+          <a href="" class="social-list__link"><i class="fas fa-globe"></i></a>
         </li>
         <li class="social-list__item">
           <a href="" class="social-list__link"><i class="fas fa-at"></i></a>
