added animated typing to a paragraph

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <!-- Portfolio item 5 -->
         <div class="portfolio__text portfolio__text-5">
           <h3 class="portfolio__subtitle">Magic 8-ball</h3>
-          <p>Coming soon!</p>
+          <p class="typing-demo">Coming soon!</p>
         </div>
         <a href="#" class="portfolio__item portfolio__item-5">
           <img
