added blinking typewriter animation

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
         </div>
       </div>
 
-      <a href="#work" class="btn">See My Work</a>
+      <a href="#work" class="btn">See my work</a>
     </section>
 
     <!-- About Me -->
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
-      <p class="section__subtitle section__subtitle--about">
+      <p class="section__subtitle section__subtitle--about typewriter">
         Biologist & teacher turned developer
       </p>
 
@@ -210,7 +210,7 @@
         <!-- Portfolio item 5 -->
         <div class="portfolio__text portfolio__text-5">
           <h3 class="portfolio__subtitle">Magic 8-ball</h3>
-          <p class="typing-demo">Coming soon!</p>
+          <p>Coming soon!</p>
         </div>
         <a href="#" class="portfolio__item portfolio__item-5">
           <img
