added typing loader

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
         <div class="portfolio__text portfolio__text-5">
           <h3 class="portfolio__subtitle">Magic 8-ball</h3>
           <p>Coming soon!</p>
+          <p class="typing-loader"></p>
         </div>
         <a href="#" class="portfolio__item portfolio__item-5">
           <img
@@ -224,6 +225,7 @@
         <div class="portfolio__text portfolio__text-6">
           <h3 class="portfolio__subtitle">Email Newsletter</h3>
           <p>Coming soon!</p>
+          <p class="typing-loader"></p>
         </div>
         <a href="#" class="portfolio__item portfolio__item-6">
           <img
@@ -237,6 +239,7 @@
         <div class="portfolio__text portfolio__text-7">
           <h3 class="portfolio__subtitle">Food Blog</h3>
           <p>Coming soon!</p>
+          <p class="typing-loader"></p>
         </div>
         <a href="#" class="portfolio__item portfolio__item-7">
           <img
@@ -250,6 +253,7 @@
         <div class="portfolio__text portfolio__text-8">
           <h3 class="portfolio__subtitle">Netflix Clone</h3>
           <p>Coming soon!</p>
+          <p class="typing-loader"></p>
         </div>
         <a href="#" class="portfolio__item portfolio__item-8">
           <img
