updated footer styling

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <a href="mailto:ridderfalk@gmail.com" class="footer-link"
+      <a href="mailto:ridderfalk@gmail.com" class="footer__link"
         >ridderfalk@gmail.com</a
       >
       <ul class="social-list">
