added a typing carousel

--- a/index.html
+++ b/index.html
@@ -105,11 +105,16 @@
     <!-- About Me -->
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
-      <p class="section__subtitle section__subtitle--about typewriter">
+      <p class="section__subtitle section__subtitle--about">
         Biologist & teacher turned developer
       </p>
 
       <div class="about-me__body">
+        <span
+          class="txt-rotate"
+          data-period="2000"
+          data-rotate='[ "Hi.", "Hej.", "Merhaba.", "Aloha.", "Annyeonghaseyo.", "Hola." ]'
+        ></span>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
           necessitatibus laborum unde, itaque ducimus recusandae amet voluptas
@@ -117,10 +122,11 @@
           voluptatibus blanditiis nisi enim?
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus
-          voluptas hic incidunt libero dignissimos impedit exercitationem
-          obcaecati quae eos voluptatum possimus, inventore doloribus suscipit
-          quasi odio vero quis ullam ea.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid vitae
+          a odio nisi optio, quis asperiores, saepe sapiente labore harum
+          recusandae consequatur sed. Aut nostrum magni deleniti consequatur
+          laboriosam in! &lt;div&gt; Lorem ipsum dolor sit amet consectetur
+          adipisicing elit.
         </p>
       </div>
 
@@ -296,6 +302,17 @@
           <a href="" class="social-list__link"><i class="fas fa-at"></i></a>
         </li>
       </ul>
+      <div>
+        <h1>
+          This habibi is
+          <!-- <span
+            class="txt-rotate"
+            data-period="2000"
+            data-rotate='[ "nerdy.", "simple.", "pure JS.", "pretty.", "fun!" ]'
+          ></span> -->
+        </h1>
+      </div>
     </footer>
+    <script src="./js/script.js"></script>
   </body>
 </html>
