created a hamburger element

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- navbar -->
     <header>
       <div>
         <i class="far fa-hand-spock"></i>
@@ -34,7 +35,7 @@
         <span class="hamburger"></span>
       </button>
       <nav class="nav">
-        <ul class="nav_list">
+        <ul class="nav__list">
           <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
           <li class="nav__item">
             <a href="services" class="nav__link">My Services</a>
@@ -298,20 +299,7 @@
         <li class="social-list__item">
           <a href="" class="social-list__link"><i class="fas fa-globe"></i></a>
         </li>
-        <li class="social-list__item">
-          <a href="" class="social-list__link"><i class="fas fa-at"></i></a>
-        </li>
       </ul>
-      <div>
-        <h1>
-          This habibi is
-          <!-- <span
-            class="txt-rotate"
-            data-period="2000"
-            data-rotate='[ "nerdy.", "simple.", "pure JS.", "pretty.", "fun!" ]'
-          ></span> -->
-        </h1>
-      </div>
     </footer>
     <script src="./js/script.js"></script>
   </body>
