--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
       </button>
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
+          <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
           <li class="nav__item">
-            <a href="services" class="nav__link">My Services</a>
+            <a href="#services" class="nav__link">My Services</a>
           </li>
           <li class="nav__item">
-            <a href="about" class="nav__link">About Me</a>
+            <a href="#about" class="nav__link">About Me</a>
           </li>
           <li class="nav__item">
-            <a href="work" class="nav__link">My Work</a>
+            <a href="#work" class="nav__link">My Work</a>
           </li>
         </ul>
       </nav>
@@ -301,6 +301,6 @@
         </li>
       </ul>
     </footer>
-    <script src="./js/script.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
