added padelmate mockup

--- a/index.html
+++ b/index.html
@@ -149,9 +149,12 @@
             nemo reiciendis.
           </p>
         </div>
-        <a href="#" class="portfolio__item portfolio__item-1">
+        <a
+          href="https://github.com/HannahSchafer/PadelScoreKeeper"
+          class="portfolio__item portfolio__item-1"
+        >
           <img
-            src="img/portfolio-01.jpg"
+            src="img/padelmate_mockup.png"
             alt=""
             class="portfolio__img portfolio__img-1"
           />
@@ -167,7 +170,10 @@
             nemo reiciendis.
           </p>
         </div>
-        <a href="#" class="portfolio__item portfolio__item-2">
+        <a
+          href="https://github.com/FredrikRidderfalk/chrome_recipes_extension"
+          class="portfolio__item portfolio__item-2"
+        >
           <img
             src="img/portfolio-02.jpg"
             alt=""
@@ -185,7 +191,10 @@
             nemo reiciendis.
           </p>
         </div>
-        <a href="#" class="portfolio__item portfolio__item-3">
+        <a
+          href="https://github.com/FredrikRidderfalk/blackjack"
+          class="portfolio__item portfolio__item-3"
+        >
           <img
             src="img/portfolio-03.jpg"
             alt=""
@@ -203,7 +212,10 @@
             nemo reiciendis.
           </p>
         </div>
-        <a href="#" class="portfolio__item portfolio__item-4">
+        <a
+          href="https://github.com/FredrikRidderfalk/passenger_counting_app"
+          class="portfolio__item portfolio__item-4"
+        >
           <img
             src="img/portfolio-04.jpg"
             alt=""
